--- a/LAB6_IOT_20193470/app/src/main/res/layout/activity_main.xml
+++ b/LAB6_IOT_20193470/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gestiona tu dinero"
+        android:textSize="24dp"
+        android:textColor="@android:color/white"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
