--- a/LAB6_IOT_20193470/app/src/main/res/layout/activity_login.xml
+++ b/LAB6_IOT_20193470/app/src/main/res/layout/activity_login.xml
@@ -3,23 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:gravity="center"
+    android:padding="16dp"
+    android:background="#F4DBD6">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¡Bienvenido a MiMonedero!"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:textColor="#6750A3"/>
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/pinkpiggy"
+            android:contentDescription="Imagen de cerdito"
+            android:layout_marginBottom="12dp" />
 
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Login" />
+            android:text="Iniciar sesión"
+            android:layout_gravity="center_horizontal" />
+
+
 
     </LinearLayout>
-
-
-</LinearLayout>
