--- a/LAB6_IOT_20193470/app/src/main/res/layout/fragment_ingresos.xml
+++ b/LAB6_IOT_20193470/app/src/main/res/layout/fragment_ingresos.xml
@@ -3,13 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="10dp"
     android:gravity="center_horizontal">
     <Button
         android:id="@+id/btn_add_ingreso"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Agregar ingreso" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_ingresos"
