--- a/LAB6_IOT_20193470/app/src/main/res/layout/ingreso_item.xml
+++ b/LAB6_IOT_20193470/app/src/main/res/layout/ingreso_item.xml
@@ -3,49 +3,81 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
-
-    <TextView
-        android:id="@+id/ingreso_titulo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Título"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/ingreso_fecha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fecha" />
-
-    <TextView
-        android:id="@+id/ingreso_monto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Monto" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="4dp"/>
+    android:padding="8dp"
+    android:background="@drawable/item_background"
+    android:layout_marginBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-        <Button
-            android:id="@+id/btn_edit_ingreso"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:text="Editar" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_delete_ingreso"
-            android:layout_width="0dp"
+            <TextView
+                android:id="@+id/ingreso_titulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Título"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="#4D4070"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"/>
+
+            <TextView
+                android:id="@+id/ingreso_fecha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fecha"
+                android:textColor="#6750A3"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"/>
+
+            <TextView
+                android:id="@+id/ingreso_monto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Monto"
+                android:textColor="#6750A3"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="137dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Eliminar" />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_detalle_ingreso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ver detalle"
+                style="?attr/borderlessButtonStyle"/>
+
+            <!--<Button
+                android:id="@+id/btn_edit_ingreso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Editar" />
+
+            <Button
+                android:id="@+id/btn_delete_ingreso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Eliminar" />-->
+
+        </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
