--- a/LAB6_IOT_20193470/app/src/main/res/layout/login.xml
+++ b/LAB6_IOT_20193470/app/src/main/res/layout/login.xml
@@ -6,6 +6,14 @@
     android:padding="16dp"
     android:gravity="center">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Elige cómo quieres iniciar sesión"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="24dp"
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btn_login_mail"
